feat: find by group id
